Update to GraphicMUD-0.0.2-SNAPSHOT and RPGFramework-5.3.0-SNAPSHOT